fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1171,7 +1171,7 @@ input:focus {outline:0;}
         padding-bottom: 50px; 
     }
     .invaders-info {
-        padding-bottom: 40px;
+        padding-bottom: 80px;
     }
 }
 
